--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,27 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
 *.pem
+Thumbs.db
+ehthumbs.db
+Desktop.ini
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
 
 # local env files
-.env*.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
@@ -33,3 +42,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+COMPETITIVE_ANALYSIS.md
+IMPLEMENTATION.md
+README.md
+
+# Editors
+.vscode/
+.idea/
+*.swp
+*.swo
