--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "framer-motion": "^11.0.8",
         "next": "^14.2.0",
         "react": "^18.3.0",
-        "react-dom": "^18.3.0"
+        "react-dom": "^18.3.0",
+        "react-type-animation": "^3.2.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
