--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@supabase/supabase-js": "^2.89.0",
+        "better-auth": "^1.4.7",
         "framer-motion": "^11.0.8",
         "next": "^14.2.0",
+        "pg": "^8.16.3",
         "react": "^18.3.0",
         "react-dom": "^18.3.0",
-        "react-type-animation": "^3.2.0"
+        "react-type-animation": "^3.2.0",
+        "stripe": "^20.1.0"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
