--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@supabase/supabase-js": "^2.89.0",
         "better-auth": "^1.4.7",
+        "cloudinary": "^2.8.0",
         "framer-motion": "^11.0.8",
         "next": "^14.2.0",
         "pg": "^8.16.3",
